--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,33 +266,19 @@ nav a.active {
     margin-left: 30px;
 }
 
-.adv-list::before {
-    content: '';
-    display: block;
-    border-radius: var(--main-border-radius);
+.adv-wrap {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    width: 270px;
+    height: 120px;
 
     background-color: var(--portfolio-button-color);
-    background-position: center;
-
-    height: 120px;
     background-repeat: no-repeat;
+
     margin-bottom: 30px;
-}
-
-.icon-sat::before {
-    background-image: url(../images/advico/sat.svg);
-}
-
-.icon-clock::before {
-    background-image: url(../images/advico/clock.svg);
-}
-
-.icon-diag::before {
-    background-image: url(../images/advico/diagram.svg);
-}
-
-.icon-astronaut::before {
-    background-image: url(../images/advico/astronaut.svg);
 }
 
 .visually-hidden {
